--- a/devops.yml
+++ b/devops.yml
@@ -30,3 +30,36 @@ jobs:
           context: .
           push: true 
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/galeria:latest
+
+
+
+aws:
+    name: Deploy image to aws
+    needs: build # Solo corre si build sale bien
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    # 1. Copia el archivo docker-compose.yml al servidor
+    - name: copy docker compose via ssh key
+      uses: appleboy/scp-action@v0.1.7
+      with:
+        host: ${{ secrets.AWS_HOSTNAME }}
+        username: ${{ secrets.AWS_USERNAME }}
+        port: 22
+        key: ${{ secrets.AWS_PRIVATEKEY }}
+        source: "docker-compose.yml"
+        target: /home/${{ secrets.AWS_USERNAME }} # Ajustado según el usuario
+
+    # 2. Ejecuta los comandos en el servidor remoto
+    - name: script deploy docker services
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.AWS_HOSTNAME }}
+        username: ${{ secrets.AWS_USERNAME }}
+        key: ${{ secrets.AWS_PRIVATEKEY }}
+        port: 22
+        script: |
+            sleep 60
+            docker compose down --rmi all
+            docker compose up -d
